--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -152,8 +152,6 @@ QComboBox QWidget::item {
     padding-bottom: 2px;
 }
 
-
-/********** Line *************/
 QFrame[frameShape=&quot;4&quot;] {
     border: none;
     background: rgb(40,40,40);
@@ -168,7 +166,6 @@ QFrame#frame, QFrame#frame_newSpecialWordlist, QFrame#frame_nameservers{
     background-color: rgb(55, 55, 55);
 }
 
-/******** QLabels ***********/
 QLabel#labelResultsCount, QLabel#label_level, QLabel#labelCount, QLabel#labelResultsCountSRV {
     background-color: rgb(42, 42, 42);
 }
@@ -298,7 +295,6 @@ QProgressBar {
     text-align: center;
     color: black;
     border-width: 1px;
-    border-radius: 10px;
     border-color: rgb(25,25,25);
     border-style: inset;
     background-color: rgb(50,50,50);
@@ -337,7 +333,6 @@ QMenuBar::item:selected, QMenuBar::item:hover{
     border-style: solid;
     border-width: 1px;
     border-color: rgb(100,100,100);
-    /*background-color: rgba(144, 144, 109, 90);*/
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(145, 145, 110, 180));
 }
 
@@ -446,8 +441,7 @@ QRadioButton:hover {
      border-style:solid;
      border-width:1px;
      border-color: rgb(50,50,50);
-}
-</string>
+}</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -526,6 +520,7 @@ QRadioButton:hover {
     <addaction name="actionfavourites"/>
     <addaction name="actionmass_scan"/>
     <addaction name="actionamass"/>
+    <addaction name="actionDorker"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -636,6 +631,11 @@ QRadioButton:hover {
   <action name="actionabout_Qt_2">
    <property name="text">
     <string>about Qt</string>
+   </property>
+  </action>
+  <action name="actionDorker">
+   <property name="text">
+    <string>Dorker</string>
    </property>
   </action>
  </widget>
