--- a/gui/src/engines/active/Active.ui
+++ b/gui/src/engines/active/Active.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>912</width>
+    <width>1037</width>
     <height>422</height>
    </rect>
   </property>
@@ -357,7 +357,7 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QTabWidget" name="tabWidgetResults">
@@ -574,18 +574,9 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QListWidget" name="listWidgetLogs">
-             <property name="font">
-              <font>
-               <family>MS Shell Dlg 2</family>
-               <pointsize>8</pointsize>
-              </font>
-             </property>
-             <property name="focusPolicy">
-              <enum>Qt::NoFocus</enum>
-             </property>
-             <property name="styleSheet">
-              <string notr="true"/>
+            <widget class="QPlainTextEdit" name="plainTextEditLogs">
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
