--- a/gui/src/engines/osint/Osint.ui
+++ b/gui/src/engines/osint/Osint.ui
@@ -292,7 +292,7 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QTabWidget" name="tabWidgetResults">
@@ -531,18 +531,9 @@
             <number>0</number>
            </property>
            <item>
-            <widget class="QListWidget" name="listWidgetLogs">
-             <property name="font">
-              <font>
-               <family>MS Shell Dlg 2</family>
-               <pointsize>8</pointsize>
-              </font>
-             </property>
-             <property name="focusPolicy">
-              <enum>Qt::NoFocus</enum>
-             </property>
-             <property name="styleSheet">
-              <string notr="true"/>
+            <widget class="QPlainTextEdit" name="plainTextEditLogs">
+             <property name="readOnly">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -1410,7 +1401,6 @@
   <tabstop>lineEditTarget</tabstop>
   <tabstop>buttonStart</tabstop>
   <tabstop>tableViewResults</tabstop>
-  <tabstop>listWidgetLogs</tabstop>
  </tabstops>
  <resources/>
  <connections/>
