--- a/gui/res/themes/stylesheet.qss
+++ b/gui/res/themes/stylesheet.qss
@@ -195,7 +195,7 @@ QSplitter::handle:vertical{
     height: 5px
 }
 
-QListWidget, QTableView, QTreeView, QColumnView, QPlainTextEdit{
+QListWidget, QTableView, QTreeView, QListView, QColumnView, QPlainTextEdit{
     background-color:rgb(40, 40, 40);
     color: rgba(218, 218, 163, 180);
     border-style: solid;
@@ -203,12 +203,12 @@ QListWidget, QTableView, QTreeView, QColumnView, QPlainTextEdit{
     border-width: 1px;
 }
 
-QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected, QColumnView::item:selected {
+QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected, QListView::item:selected, QColumnView::item:selected {
     background-color: rgba(110,110,110,40);
     color: rgb(230,230,230);
 }
 
-QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover, QColumnView::item:hover, QColumnView::item:hover {
+QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover, QListView::item:hover, QColumnView::item:hover, QColumnView::item:hover {
     border-style: solid;
     border-color: rgb(40, 40, 40);
     border-width: 1px;
