--- a/gui/src/tools/RawOsint.ui
+++ b/gui/src/tools/RawOsint.ui
@@ -29,6 +29,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
+      <widget class="QCheckBox" name="checkBox">
+       <property name="text">
+        <string>Custom</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QComboBox" name="comboBoxModule"/>
      </item>
      <item>
