--- a/gui/src/engines/DnsRecords.ui
+++ b/gui/src/engines/DnsRecords.ui
@@ -328,6 +328,16 @@
        <number>5</number>
       </property>
       <item>
+       <widget class="QCheckBox" name="checkBox">
+        <property name="text">
+         <string>Autosave to Project</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>*Scan Config</string>
